Removed deprecated call to Class.newInstance